--- a/templates/demo.html
+++ b/templates/demo.html
@@ -43,9 +43,9 @@
 
             <table>
                 <tr>
-                   <td><input type="submit" name="submit" value= "submit"></td>
-                   <td><input type="submit" name="submitt" value= "submitt"></td>
-                   <td><input type="submit" name="submittt" value= "submittt"></td>
+                   <td><input type="submit" name="submit_button" value= "preprocess"></td>
+                   <td><input type="submit" name="submit_button" value= "pos tag"></td>
+                   <td><input type="submit" name="submit_button" value= "submittt"></td>
                 </tr>
             <table> 
             
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    {{us}}
+    
 
     
 </div>
