--- a/templates/melexpos.html
+++ b/templates/melexpos.html
@@ -35,6 +35,12 @@
                     <input type="file" id="myFile" name="uploaded-file" accept=".csv">
                     <input type="submit" value="Upload file">
                 </form> 
+
+                <br>
+                    <p style="color:blue;">Choose csv file to upload</p>
+                        <form action="/melexpos" target="_blank">
+                            <input type="submit" value="Show CSV" />
+                        </form>
             </div>
       </div>
 
