--- a/templates/melexpos2.html
+++ b/templates/melexpos2.html
@@ -35,6 +35,12 @@
                     <input type="file" id="myFile" name="uploaded-file" accept=".csv">
                     <input type="submit" value="Upload file">
                 </form> 
+
+                <br>
+                <p style="color:green;">file uploaded successfully</p>
+                        <form action="/process_file" target="_blank">
+                            <input type="submit" value="Show CSV" />
+                        </form>
             </div>
       </div>
 
