almost finish now do some major changes(checkpoint)

--- a/templates/show_csv_data.html
+++ b/templates/show_csv_data.html
@@ -13,6 +13,13 @@
   .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
   .fa-anchor,.fa-coffee {font-size:200px}
   
+  body {
+        background-image: url("https://cdn.mos.cms.futurecdn.net/YMa7Wx2FyjQFUjEeqa72Rm-1200-80.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+       
+}
   </style>
   </head>
   <body>
