--- a/templates/demo.html
+++ b/templates/demo.html
@@ -13,6 +13,14 @@
     body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
     .fa-anchor,.fa-coffee {font-size:200px}
+
+    body {
+        background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/c1/Mount_Rushmore_National_Treasure.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+       
+}
     
     </style>
     </head>
