--- a/templates/showprocessfile.html
+++ b/templates/showprocessfile.html
@@ -13,6 +13,13 @@
   .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
   .fa-anchor,.fa-coffee {font-size:200px}
   
+  body {
+        background-image: url("https://media.timeout.com/images/105625824/750/562/image.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+       
+}
   </style>
   </head>
   <body>
