--- a/templates/crfmodelsubmit.html
+++ b/templates/crfmodelsubmit.html
@@ -35,7 +35,7 @@
            <a href="demo" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Demo</a>
            <a href="crfmodel" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CRF Model</a>
            <a href="melexpos" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">MELEX & POS </a>
-           <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About Us</a>
+           <a href="display" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Display</a>
         </div>
         <div class="w3-row-padding w3-padding-64 w3-container">
             <div class="w3-content">
