--- a/templates/melexpos2.html
+++ b/templates/melexpos2.html
@@ -31,7 +31,7 @@
          <a href="demo" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Demo</a>
          <a href="crfmodel" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CRF Model</a>
          <a href="melexpos" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">MELEX & POS </a>
-         <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About Us</a>
+         <a href="display" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Display</a>
       </div>
 
       <div class="w3-row-padding w3-padding-64 w3-container">
@@ -46,7 +46,7 @@
                 <br>
                 <p style="color:green;">file uploaded successfully</p>
                         <form action="/process_file" target="_blank">
-                            <input type="submit" value="Show CSV" />
+                            <input type="submit" value="Submit CSV" />
                         </form>
             </div>
       </div>
