--- a/templates/show_csv_data.html
+++ b/templates/show_csv_data.html
@@ -1,50 +1,73 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href='/staticFiles/main.css' />
-  <style>
-  body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-  .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-  .fa-anchor,.fa-coffee {font-size:200px}
-  
-  body {
+    <head>
+
+    <title>W3.CSS Template</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href='/staticFiles/main.css' />
+    <style>
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+    .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+    .fa-anchor,.fa-coffee {font-size:200px}
+    
+    body {
         background-image: url("https://cdn.mos.cms.futurecdn.net/YMa7Wx2FyjQFUjEeqa72Rm-1200-80.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         
        
 }
-  </style>
-  </head>
-  <body>
+    </style>
+    </head>
+
+    <body>
     <!-- Navbar -->
     <div class="w3-top">
-      <div class="w3-bar w3-red w3-card w3-left-align w3-large">
-         <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-         <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-         <a href="demo" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Demo</a>
-         <a href="crfmodel" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CRF Model</a>
-         <a href="melexpos" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">MELEX & POS </a>
-         <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About Us</a>
-      </div>
+        <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+           <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+           <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+           <a href="demo" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Demo</a>
+           <a href="crfmodel" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CRF Model</a>
+           <a href="melexpos" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">MELEX & POS </a>
+           <a href="display" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Display</a>
+        </div>
+        <div class="w3-row-padding w3-padding-64 w3-container">
+            <div class="w3-content">
 
-      <div class="w3-row-padding w3-padding-64 w3-container">
+                
+                <h1>Build Own CRF Model</h1>
+                <p>Insert csv file to be train in the CRF model</p>
+                <form method="POST" enctype="multipart/form-data" action="/crfmodel">
+                    <input type="file" id="myFile" name="uploaded-file" accept=".csv">
+                    <input type="submit" value="Upload file">
+                </form> 
+
+                <br>
+                <p style="color:green;">file uploaded successfully</p>
+                        <form action="/show_data" target="_blank">
+                            <input type="submit" value="Show CSV" />
+                        </form>
+            </div>
+            
+        </div>
+
+        div class="w3-row-padding w3-padding-64 w3-container">
             <div class="w3-content">
               <h2>Click the download button below to download your custom CRF model</h2>
               <a href="/return-files/" target="blank"><button class='btn btn-default'>Download!</button></a>
 
             </div>
-      </div>
-\
-
     </div>
 
- 
+    <body>
+        
+      </body>
     </body>
+
 </html>
